fix: header for components

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <nav class="navigation spacing flex-row items-center wrap py-2 px-6 fixed left-0 top-0 z-1 w-100">
             <a class="logo" href="../index.html">
-                <h3>Polaroid</h3>
+                <h3 class="text-lg">Polaroid</h3>
             </a>
             <button class="menu hide"><i class="fa fa-bars"></i></button>
 
@@ -118,7 +118,7 @@
             <section id="alert">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Alert</h2>
+                        <h3 class="font-black my-2 text-xl">Alert</h3>
                         <p>Alerts are use for showing small messages to user.</p>
                         <p>
                             Use different alerts depending upon the use cases such as, to
@@ -168,7 +168,7 @@
             <section id="avatar">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Avatar</h2>
+                        <h3 class="font-black my-2 text-xl">Avatar</h3>
                         <p>
                             Change the size of avatar by simply changing the class according
                             to your usecase.
@@ -238,7 +238,7 @@
             <section id="badge">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Badge</h2>
+                        <h3 class="font-black my-2 text-xl">Badge</h3>
                         <p>
                             Badge is use for notifications and for user status and for many
                             other usecases such as on cards.
@@ -370,7 +370,7 @@
             <section id="button">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Button</h2>
+                        <h3 class="font-black my-2 text-xl">Button</h3>
                         <p>Buttons are used for user actions</p>
                         <p>There is primary, secondary, and outlined buttons.</p>
                         <p>
@@ -489,7 +489,7 @@
             <section id="card">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Card</h2>
+                        <h3 class="font-black my-2 text-xl">Card</h3>
                         <p>
                             Cards are use for showing products on ecommerce or for users
                             posts on social media. For card to have a shadow put
@@ -655,7 +655,7 @@
             <section id="grid">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Grid</h2>
+                        <h3 class="font-black my-2 text-xl">Grid</h3>
                         <p>Grids are used for layouting the elements in row and column manner.</p>
                         <p>
                             For different variation of grid put class <code>grid-col-2</code> for 2 columns,
@@ -752,7 +752,7 @@
             <section id="image">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Image</h2>
+                        <h3 class="font-black my-2 text-xl">Image</h3>
                         <p>
                             Responsive images can be use for profile picture and as a
                             background.
@@ -787,7 +787,7 @@
             <section id="input">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Input</h2>
+                        <h3 class="font-black my-2 text-xl">Input</h3>
                         <p>Input and textarea fields for taking input from user.</p>
 
                         <p class="mt-2">
@@ -834,7 +834,7 @@
             <section id="lists">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Lists</h2>
+                        <h3 class="font-black my-2 text-xl">Lists</h3>
                         <p>List for use for listing elements example contact list.</p>
                         <p>Spaced list or normal list</p>
                     </div>
@@ -912,7 +912,7 @@
             <section id="modal">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Modal</h2>
+                        <h3 class="font-black my-2 text-xl">Modal</h3>
                         <p>
                             Modal is use for getting confirmation or showing some
                             information to user.
@@ -1012,7 +1012,7 @@
             <section id="navigation">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Navigation</h2>
+                        <h3 class="font-black my-2 text-xl">Navigation</h3>
                         <p>
                             Navigation bar is use by users to navigate to specific part or
                             page of your web application. To fix the navigation bar to top
@@ -1135,7 +1135,7 @@
             <section id="toast">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Toast</h2>
+                        <h3 class="font-black my-2 text-xl">Toast</h3>
                         <p>Toast are use for small notifications.</p>
                         <p>
                             For different types of toast put class <code>success</code> or
@@ -1196,7 +1196,7 @@
             <section id="typography">
                 <article>
                     <div>
-                        <h2 class="font-black my-2">Typography</h2>
+                        <h3 class="font-black my-2 text-xl">Typography</h3>
                         <p>Text utilities for your projects.</p>
                     </div>
                     <div class="snippet rounded-sm p-3 flex-column flex-center wrap my-1 border">
