--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navigation spacing flex-row items-center wrap py-2 px-6 fixed left-0 top-0 z-10 w-100">
         <a href=" ../index.html">
-            <h3>Polaroid</h3>
+            <h3 class="text-lg">Polaroid</h3>
         </a>
         <ul class="ml-auto flex-row items-center font-bold">
             <li class="ml-4">
