feat: add component description for get started

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Polaroid a CSS component library for your awesome UI." />
 
     <!-- links -->
+    <link rel="icon" type="image/x-icon" href="/assets/cube.png">
     <link rel="stylesheet" href="./style.css" />
     <title>⚒ Polaroid | Get Started!</title>
 </head>
