--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Polaroid a CSS component library for your awesome UI." />
 
     <!-- links -->
+    <link rel="icon" type="image/x-icon" href="/assets/cube.png">
     <link rel="stylesheet" href="./documentation/style.css" />
     <title>⚒ Polaroid | Home</title>
 </head>
