feat: add scroll up button

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -83,6 +83,12 @@
             </ul>
         </aside>
         <main class="main-container flex-column p-1">
+            <a class="btn-float m-2 py-1 px-3 flex-row fixed bottom-1 right-1 z-1 flex-center rounded-full"
+                href="#usage">
+                <i class="fa fa-arrow-up btn-icon"></i>
+            </a>
+
+
             <section id="usage" class="usage">
                 <article>
                     <p class="text-lg mt-3 mb-2 pb-2 border-b-1">
@@ -94,12 +100,12 @@
 
                 <article class="mt-5">
                     <p class="text-lg font-bold">Installation</p>
-                    <p>
+                    <p class="mt-1">
                         Import the below link in your head section of html file or in CSS
                         file.
                     </p>
 
-                    <div class="my-2 snippet">
+                    <div class="mt-2 snippet">
                         <iframe loading="lazy"
                             src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fpolaroid7.netlify.app%252Fpolaroid.css%2522%252F%253E%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509"
                             style="
@@ -112,8 +118,15 @@
                     </div>
                 </article>
                 <article class="mt-5">
-                    <p class="text-lg font-bold">References</p>
-                    <ol class="ml-2">
+                    <p class="text-lg font-bold">Components</p>
+                    <p class="mt-1">
+                        Components are the reusable building blocks of our web application. Each component meets a
+                        specific interaction or UI need, and has been specifically created to work together to create
+                        intuitive user experiences.
+                    </p>
+
+                    <p class="text-lg font-bold mt-3">References</p>
+                    <ol class="ml-2 mt-1">
                         <li>
                             Icons from
                             <a class="underline" href="https://fontawesome.com/">font-awesome</a>
@@ -123,7 +136,6 @@
                             <a class="underline" href="https://picsum.photos/">picsum</a>
                         </li>
                     </ol>
-                    <p class="mt-8">Made by Rohan Mathur.</p>
                 </article>
             </section>
 
@@ -479,9 +491,9 @@
                     </p>
 
                     <div class="snippet rounded-sm p-3 flex-row content-center my-2 border">
-                        <button class="btn-float m-2 font-semibold py-1 px-3 flex-row flex-center rounded-full">
+                        <a href="#" class="btn-float m-2 font-semibold py-1 px-3 flex-row flex-center rounded-full">
                             <i class="fa fa-plus btn-icon"></i>
-                        </button>
+                        </a>
                     </div>
 
                     <div class="my-3 snippet">
