fix: code snippet of float button

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Polaroid a CSS component library for your awesome UI." />
 
     <!-- links -->
-    <link rel="icon" type="image/x-icon" href="/assets/cube.png">
+    <link rel="icon" type="image/x-icon" href="/assets/cube.png" />
     <link rel="stylesheet" href="./style.css" />
     <title>⚒ Polaroid | Get Started!</title>
 </head>
@@ -88,7 +88,6 @@
                 <i class="fa fa-arrow-up btn-icon"></i>
             </a>
 
-
             <section id="usage" class="usage">
                 <article>
                     <p class="text-lg mt-3 mb-2 pb-2 border-b-1">
@@ -120,8 +119,9 @@
                 <article class="mt-5">
                     <p class="text-lg font-bold">Components</p>
                     <p class="mt-1">
-                        Components are the reusable building blocks of our web application. Each component meets a
-                        specific interaction or UI need, and has been specifically created to work together to create
+                        Components are the reusable building blocks of our web
+                        application. Each component meets a specific interaction or UI
+                        need, and has been specifically created to work together to create
                         intuitive user experiences.
                     </p>
 
@@ -498,9 +498,9 @@
 
                     <div class="my-3 snippet">
                         <iframe loading="lazy"
-                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Cbutton%2520class%253D%2522btn-floating%2520m-2%2520font-semibold%2520py-1%2520px-3%2520flex-row%2520absolute%2520bottom-1%2520right-1%2520flex-center%2520%250A%2520%2520%2520%2520%2520%2520%2520%2509rounded-full%2522%253E%250A%2509%2509%253Ci%2520class%253D%2522fa%2520fa-plus%2520btn-icon%2522%253E%253C%252Fi%253E%250A%253C%252Fbutton%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522btn-float%2520m-2%2520font-semibold%2520py-1%2520px-3%2520flex-row%2520flex-center%2520rounded-full%2522%253E%250A%2509%253Ci%2520class%253D%2522fa%2520fa-plus%2520btn-icon%2522%253E%253C%252Fi%253E%250A%253C%252Fa%253E%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509"
                             style="
-									height: 152px;
+									height: 133px;
 									border: 0;
 									transform: scale(1);
 									overflow: hidden;
