refactor: alert component description

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -147,7 +147,8 @@
                         <p>Alerts are use for showing small messages to user.</p>
                         <p>
                             Use different alerts depending upon the use cases such as, to
-                            show success, information, error and warning.
+                            show <code>success</code>, <code>information</code>, <code>error</code> and
+                            <code>warning</code>.
                         </p>
                     </div>
                     <div class="snippet rounded-sm p-3 flex-column items-center my-1 border">
