feat: add javascript code snippet for toast

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1283,6 +1283,16 @@
 								" sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
+
+                    <p>JavaScript for toast.</p>
+                    <div class="my-2 snippet">
+                        <iframe
+                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=javascript&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=const%2520toast%2520%253D%2520document.querySelector%28%2522.demo-toast%2522%29%253B%250Aconst%2520openToast%2520%253D%2520document.querySelector%28%2522.open-demo-toast%2522%29%253B%250Aconst%2520closeToast%2520%253D%2520document.querySelector%28%2522.close-demo-toast%2522%29%253B%250A%250Alet%2520timerId%253B%250Aconst%2520handleOpenToastClick%2520%253D%2520%28%29%2520%253D%253E%2520%257B%250A%2509toast.style.display%2520%253D%2520%2522flex%2522%253B%250A%2509timerId%2520%253D%2520setTimeout%28%28%29%2520%253D%253E%2520%257B%250A%2509%2509toast.style.display%2520%253D%2520%2522none%2522%253B%250A%2509%257D%252C%25203000%29%253B%250A%257D%253B%250A%250Aconst%2520handleCloseToastClick%2520%253D%2520%28%29%2520%253D%253E%2520%257B%250A%2509clearTimeout%28timerId%29%253B%250A%2509toast.style.display%2520%253D%2520%2522none%2522%253B%250A%257D%253B%250A%250AopenToast.addEventListener%28%2522click%2522%252C%2520handleOpenToastClick%29%253B%250AcloseToast.addEventListener%28%2522click%2522%252C%2520handleCloseToastClick%29%253B%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+                            style="height: 438px; border:0; transform: scale(1); overflow:hidden;"
+                            sandbox="allow-scripts allow-same-origin">
+                        </iframe>
+                    </div>
+
                 </article>
             </section>
 
